Change the loader to support uncolored clouds

--- a/trained_model_assets/proto151_V2.0_epoch_100_Myria3DV3.1.0_predict_config_V3.7.0.yaml
+++ b/trained_model_assets/proto151_V2.0_epoch_100_Myria3DV3.1.0_predict_config_V3.7.0.yaml
@@ -119,7 +119,7 @@ datamodule:
   points_pre_transform:
     _target_: functools.partial
     _args_:
-    - ${get_method:myria3d.pctl.points_pre_transform.lidar_hd.lidar_hd_pre_transform}
+    - ${get_method:myria3d.pctl.points_pre_transform.dfc2019.dfc2019_pre_transform}
   pre_filter:
     _target_: functools.partial
     _args_:
