--- a/configs/datamodule/hdf5_datamodule.yaml
+++ b/configs/datamodule/hdf5_datamodule.yaml
@@ -10,7 +10,7 @@ hdf5_file_path: "path/to/dataset_file.hdf5"  # where to create a HDF5 dataset fi
 points_pre_transform:
   _target_: functools.partial
   _args_:
-    - "${get_method:myria3d.pctl.points_pre_transform.lidar_hd.lidar_hd_pre_transform}"
+    - "${get_method:myria3d.pctl.points_pre_transform.dfc2019.dfc2019_pre_transform}"
 
 pre_filter:
   _target_: functools.partial
