--- a/configs/experiment/RandLaNet_base_run_FR.yaml
+++ b/configs/experiment/RandLaNet_base_run_FR.yaml
@@ -9,11 +9,12 @@ logger:
 
 # Smaller BS : 10 x 40 000 (max) == 400 000 pts i.e. previous budget of 32 x 12 500pts.
 datamodule:
-  batch_size: 10
+  batch_size: 5
 
 trainer:
+  accelerator: gpu
   num_sanity_val_steps: 2
-  min_epochs: 100
+  min_epochs: 20
   max_epochs: 150
   accumulate_grad_batches: 3  # b/c larger clouds will not fit in memory with original Batch Size
   # gpus: [1]
