Pointnet implemented, inference still weird

--- a/configs/experiment/PointNet_baseline.yaml
+++ b/configs/experiment/PointNet_baseline.yaml
@@ -1,20 +1,21 @@
 # @package _global_
 defaults:
   - override /datamodule/transforms/augmentations: light.yaml
+  - override /model: pointnet_model.yaml
 
 logger:
   comet:
-    experiment_name: "RandLaNet_base_run_FR-(BatchSize10xBudget(300pts-40000pts))"
+    experiment_name: "PointNet-(BatchSize10xBudget(300pts-40000pts))"
 
 
 # Smaller BS : 10 x 40 000 (max) == 400 000 pts i.e. previous budget of 32 x 12 500pts.
 datamodule:
-  batch_size: 4
+  batch_size: 16
 
 trainer:
   accelerator: gpu
   num_sanity_val_steps: 2
-  min_epochs: 20
+  min_epochs: 30
   max_epochs: 150
   accumulate_grad_batches: 3  # b/c larger clouds will not fit in memory with original Batch Size
   # gpus: [1]
