--- a/configs/dataset_description/20240606_dfc2019.yaml
+++ b/configs/dataset_description/20240606_dfc2019.yaml
@@ -11,6 +11,11 @@ classification_preprocessing_dict: {0: 0}
 # classification_dict = {code_int: name_str, ...} and MUST be sorted (increasing order).
 classification_dict: {0: "unclassified", 2: "ground", 5: vegetation, 6: "building", 9: water, 17: bridge}
 
+# class_weights for the CrossEntropyLoss with format "[[w1,w2,w3...,wk]]" with w_i a float e.g. 1.0
+# Balanced CE: arbitrary weights based on heuristic.
+# class_weights: [3.0,1.0,10.0,6.0,20.0,20.0] normalized so they sum to 7 to preserve scale of CELoss
+class_weights: [0.3,0.1,1.0,0.6,2.0,2.0]
+
 # Input and output dims of neural net are dataset dependant:
 d_in: 2
 num_classes: 6
