--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -27,7 +27,7 @@ defaults:
 
   - trainer: default.yaml
   - datamodule: hdf5_datamodule.yaml
-  - dataset_description: 20240606_dfc2019.yaml #20220607_151_dalles_proto.yaml  # describes input features and classes
+  - dataset_description: 20230601_lidarhd_pacasam_dataset.yaml # 20220607_151_dalles_proto.yaml # 20240606_dfc2019.yaml # describes input features and classes
   - callbacks: default.yaml # set this to null if you don't want to use callbacks
   - model: pyg_randla_net_model.yaml
   
