--- a/configs/experiment/predict.yaml
+++ b/configs/experiment/predict.yaml
@@ -10,9 +10,10 @@ task:
   task_name: "predict"
 
 predict:
-  src_las: "/home/kuba/myria3d/data/test/*.las"  # Any glob pattern can be used to predict on multiple files.
-  output_dir: "/home/kuba/myria3d/data/output"  # Predictions are saved in a new file which shares src_las basename.
-  ckpt_path: "/path/to/lightning_model.ckpt"  # Checkpoint of trained model.
+  src_las: ${hydra:runtime.cwd}/data/test/*.laz  # Any glob pattern can be used to predict on multiple files.
+  output_dir: ${hydra:runtime.cwd}/data/output  # Predictions are saved in a new file which shares src_las basename.
+  ckpt_path: ${hydra:runtime.cwd}/trained_model_assets/randlanet_norgb_epoch_028.ckpt  # Checkpoint of trained model.
+
   # + other params in configs/predict/default.yaml
 
 hydra:
@@ -20,4 +21,4 @@ hydra:
 
 datamodule:
   # larger batch size for speed
-  batch_size: 50 
+  batch_size: 50
