--- a/configs/datamodule/hdf5_datamodule.yaml
+++ b/configs/datamodule/hdf5_datamodule.yaml
@@ -10,7 +10,7 @@ hdf5_file_path: ${hydra:runtime.cwd}/data/hdf5_lidarhd.hdf5  # where to create a
 points_pre_transform:
   _target_: functools.partial
   _args_:
-    - "${get_method:myria3d.pctl.points_pre_transform.dfc2019.dfc2019_pre_transform}"
+    - "${get_method:myria3d.pctl.points_pre_transform.lidar_hd_norgb.lidar_hd_norgb_pre_transform}"
 
 pre_filter:
   _target_: functools.partial
