--- a/configs/experiment/predict.yaml
+++ b/configs/experiment/predict.yaml
@@ -13,6 +13,7 @@ predict:
   src_las: ${hydra:runtime.cwd}/data/test/*.laz  # Any glob pattern can be used to predict on multiple files.
   output_dir: ${hydra:runtime.cwd}/data/output  # Predictions are saved in a new file which shares src_las basename.
   ckpt_path: ${hydra:runtime.cwd}/trained_model_assets/randlanet_norgb_epoch_028.ckpt  # Checkpoint of trained model.
+  gpus: [0]
 
   # + other params in configs/predict/default.yaml
 
